--- a/testing/sslh/APKBUILD
+++ b/testing/sslh/APKBUILD
@@ -38,7 +38,7 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" PREFIX=/usr install
 
-	install -D -m644 basic.cfg "$pkgdir/etc/$pkgname/$pkgname.conf"
+	install -D -m644 basic.cfg "$pkgdir/etc/$pkgname.conf"
 	install -D -m755 "$srcdir/$pkgname.initd" "$pkgdir/etc/init.d/$pkgname"
 	install -D -m644 "$srcdir/$pkgname.confd" "$pkgdir/etc/conf.d/$pkgname"
 }
@@ -68,5 +68,5 @@ sha512sums="eccaddd5a4299206f195c2f7a78840b2f76f8a0cf10a715b5c72f959ed5d3259fc5e
 b82d3c799f0cdf183fe0545e1d2b4f142070112d7ec3594afd709608c4893c300122aa32026dd7f8e782eb3981bf85fc02f878e2613ddfe014f39bbb94fb441e  fix-make-install.patch
 5773ee1d91e099726b614dbe385f2668699d25029fc300b664411c6082e95d3f27df11b9b1489bee3444c81bf941b8db13b4d382343788e47408c593c4531816  fail2ban.patch
 c5e3d6714c5588731c749feaed24a8d551d1fbdc527348209465b9416efe4713ff9715eb10867fea13fd5cbdf2ab41d52019fb93d4e5ead29e8fda47581598aa  config.patch
-ba0a0fe8785ab9963d4dc11c39d6cbd41fe14d1e8f6d61eb0bf6eb2855e4f2de119b76f82894f3d52a91467ee83f4bd805d8eafc3c7da7b5a4f630cc4a241462  sslh.initd
-580114cef9356d66ec1e6c306837d44dc3098e8f3f805eda20c5d8f81f087bf295b25801ee64ee2bc667ce7324f510ff6f4fc7e222d1431ec3d4e82bbcfb160f  sslh.confd"
+95e114f2973d063679d628249030c4ea189f43821c28ac44973d71ed4c7be8de0417cfdff4318aec24fac6aec1b06735d5480f6f7aa193fae2ab5a8feffecd36  sslh.initd
+19a5556eb5232428c506986d0bf42e678b0b21f40d2efe3679bce10807d73b0df2172c198c7153125e4b66039c3af5c776f0e66997be5fffa5200c9d13d179e1  sslh.confd"
