community/gnome-games: upgrade to 3.36.0

--- a/community/gnome-games/APKBUILD
+++ b/community/gnome-games/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-games
-pkgver=3.34.2
-pkgrel=2
-pkgdesc="Browser and play your games"
+pkgver=3.36.0
+pkgrel=0
+pkgdesc="Browse and play your games"
 url="https://wiki.gnome.org/Apps/Games"
 arch="all !s390x" # needs librsvg
 license="GPL-3.0-or-later"
@@ -32,4 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="df83535f253306b0399843fe899487079244a3640e72a0a85a0221cebf595c2bbf27fa4fc1182e529004a656e30d346eb6c30a9c19c2fbf45cefc8517ab30c86  gnome-games-3.34.2.tar.xz"
+sha512sums="d555615f802577b204ffc82b4badf7d4a5761e0ebfa87355f20798e5111963c6e2c6b89cc0a519915d3a99ab022aa618f7d538520b5fca87ae720a4ef053155b  gnome-games-3.36.0.tar.xz"
