community/gnome-calendar: upgrade to 3.36.0

--- a/community/gnome-calendar/APKBUILD
+++ b/community/gnome-calendar/APKBUILD
@@ -1,16 +1,16 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-calendar
-pkgver=3.34.2
-pkgrel=2
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="Calendar application for GNOME"
 url="https://wiki.gnome.org/Apps/Calendar"
-arch="all"
+arch="all !s390x" # libhandy
 license="GPL-3.0-or-later"
 depends="gsettings-desktop-schemas"
 makedepends="meson libical-dev gsettings-desktop-schemas-dev evolution-data-server-dev
 	libsoup-dev libdazzle-dev glib-dev gtk+3.0-dev libgweather-dev geoclue-dev
-	geocode-glib-dev gtk-doc"
+	geocode-glib-dev gtk-doc libhandy-dev"
 options="!check" # Can't be run on release builds and we don't want debug asserts
 subpackages="$pkgname-lang"
 source="https://download.gnome.org/sources/gnome-calendar/${pkgver%.*}/gnome-calendar-$pkgver.tar.xz"
@@ -30,4 +30,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="6c69a1ee46a5ccfb4d6d1b7a60932412b486ad4576a4c78c89e03270147e30828ecaca6b5f0e27a741eb9d5ed74ca474ba0ddfb6d044748877b6c9ab7ae023a5  gnome-calendar-3.34.2.tar.xz"
+sha512sums="e92540be94f71a025a2450cd7f46bc59628ac7fa6ac84a8bcc20a263f305b10ecfff67da7db0ace487cfa8fd460c208305c581e9a878ec0d8a600d55aae51386  gnome-calendar-3.36.0.tar.xz"
