--- a/community/evince/APKBUILD
+++ b/community/evince/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=evince
-pkgver=3.34.2
-pkgrel=2
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="simple document viewer for GTK+"
 url="https://wiki.gnome.org/Apps/Evince"
 arch="all !s390x" # Limited by adwaita-icon-theme needing librsvg
@@ -12,10 +12,11 @@ depends="adwaita-icon-theme"
 depends_dev="gtk+3.0-dev poppler-dev libsm-dev libevent-dev libxrandr-dev
 	libx11-dev libxcursor-dev libxcomposite-dev libxi-dev util-linux-dev
 	tiff-dev gobject-introspection-dev libxml2-dev libspectre-dev"
-makedepends="$depends_dev intltool itstool
-	adwaita-icon-theme-dev gnome-common automake autoconf
-	gtk-doc yelp-tools appstream-glib-dev"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-libs"
+makedepends="$depends_dev itstool meson libexecinfo-dev nautilus-dev
+	adwaita-icon-theme-dev gtk-doc yelp-tools appstream-glib-dev
+	libgxps-dev gspell-dev gstreamer-dev libsecret-dev texlive-dev
+	gst-plugins-base-dev"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-nautilus $pkgname-libs"
 source="https://download.gnome.org/sources/evince/${pkgver%.*}/evince-$pkgver.tar.xz"
 
 # secfixes:
@@ -25,27 +26,32 @@ source="https://download.gnome.org/sources/evince/${pkgver%.*}/evince-$pkgver.ta
 #   - CVE-2017-1000083
 
 build() {
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
-		--disable-nautilus \
-		--without-keyring \
-		--without-gspell \
-		--enable-introspection \
-		--disable-static \
-		--enable-comics \
-		--with-systemduserunitdir=no
-	make
-}
-
-package() {
-	make DESTDIR="$pkgdir" install
+		--mandir=/usr/share/man \
+		--localstatedir=/var \
+		--buildtype=plain \
+		-Dsystemduserunitdir=no \
+		-Dgtk_doc=false \
+		output
+	ninja -C output
 }
 
 check() {
-	make check
+	ninja -C output test
+}
+
+package() {
+	DESTDIR="$pkgdir" ninja -C output install
+}
+
+nautilus() {
+	pkgdesc="$pkgname (Nautilus extension)"
+	install_if="$pkgname=$pkgver-r$pkgrel nautilus"
+
+	mkdir -p "$subpkgdir"/usr/lib
+	mv "$pkgdir"/usr/lib/nautilus "$subpkgdir"/usr/lib
 }
 
 libs() {
@@ -60,4 +66,4 @@ doc() {
 	fi
 }
 
-sha512sums="51bfa4671e17a98c536790185ece6f4f77b956062901f840cd298cdc3e42eb7e8cabe9bfa84387f185cdf7462a322ef54bbc463b988a677af68561e55acd9f12  evince-3.34.2.tar.xz"
+sha512sums="914c182f0ca71a0df99036339fe18f7c93514bae461ddecd719c5659c1cc67701f825e7a58b1eb203051ec55ccd402371fc70d3a27134ccdf915966e5bad8b7a  evince-3.36.0.tar.xz"
