community/yarn: upgrade to 1.22.1

--- a/community/yarn/APKBUILD
+++ b/community/yarn/APKBUILD
@@ -1,15 +1,17 @@
 # Contributor: Ed Robinson <ed@reevoo.com>
 # Maintainer: Ed Robinson <ed@reevoo.com>
 pkgname=yarn
-pkgver=1.22.0
+pkgver=1.22.1
 pkgrel=0
 pkgdesc="Fast, reliable, and secure dependency management for Node.js"
 url="https://yarnpkg.com/"
 arch="noarch"
 license="BSD-2-Clause"
+options="!check" # No test suite
 depends="nodejs"
 source="https://yarnpkg.com/downloads/$pkgver/yarn-v$pkgver.tar.gz
-	apk-install-method.patch"
+	apk-install-method.patch
+	"
 builddir="$srcdir/$pkgname-v$pkgver"
 
 check() {
@@ -30,5 +32,5 @@ package() {
 	ln -s /$destdir/bin/yarn "$pkgdir"/usr/bin/yarnpkg
 }
 
-sha512sums="28c1cffc9ab9de364a4d8f624d4b77748565fdb7ba50fb3620da3debe0676472cac583537f03269601d368c5b2199a0eef8448e00205be75a162b5ead9448992  yarn-v1.22.0.tar.gz
+sha512sums="0da6c6f494ab8cc218a036884462d0754aa5dc31668005b99d22eb420b01e0f888328321264f57343fb9102316c47518801306120894dfb255ff69ff461ca2db  yarn-v1.22.1.tar.gz
 30431f7aa5fe7382e062b92e413ea8d118e157d89aa043353c18ff7d1721d0e3ecfbe68de1f0058b3b70cee5cf9baa08d28f1718beb5d14fcb0cf2881dff1eac  apk-install-method.patch"
