--- a/community/virt-manager/APKBUILD
+++ b/community/virt-manager/APKBUILD
@@ -4,7 +4,7 @@ pkgver=2.2.1
 pkgrel=2
 pkgdesc="GUI for managing virtual machines"
 url="https://virt-manager.org/"
-arch="noarch"
+arch="noarch !s390x"
 license="GPL-2.0-or-later"
 depends="python3 $pkgname-common spice-gtk vte3 py3-cairo gtk-vnc>=0.5.2-r2 gtksourceview4"
 _common_deps="libvirt-glib py3-libxml2 py3-libvirt py3-gobject3 py3-requests libosinfo"
