testing/dcc arrange files better
add dcc.post-deinstall to remove crontab entry created during install.

remove dcc-openrc from depends as other packages do not do this
move dccifd-test to dccifd sub package and move dump-clients to dccd sub package
move dccproc to extras as procmail is depreciated
add extras to subpackages as it was missing
chmod LICENESE file so it is installed and fix man path so auto moved to doc sub package also

--- a/testing/dcc/APKBUILD
+++ b/testing/dcc/APKBUILD
@@ -2,16 +2,15 @@
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname="dcc"
 pkgver="2.3.167"
-pkgrel=1
+pkgrel=2
 pkgdesc="Distributed Checksum Clearinghouses or DCC spam filter"
 url="https://www.dcc-servers.net/dcc/"
 arch="all"
 license="custom"
 pkgusers="dcc"
 pkggroups="dcc"
-depends="dcc-openrc"
 makedepends="libmilter-dev"
-subpackages="$pkgname-dccd $pkgname-dccifd $pkgname-dccm
+subpackages="$pkgname-dccd $pkgname-dccifd $pkgname-dccm $pkgname-extras
 	$pkgname-openrc $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://www.dcc-servers.net/src/dcc/old/dcc-$pkgver.tar.Z
 	10-$pkgname-alpine.patch
@@ -19,12 +18,13 @@ source="$pkgname-$pkgver.tar.gz::https://www.dcc-servers.net/src/dcc/old/dcc-$pk
 	$pkgname.confd
 	$pkgname.initd
 "
-install="$pkgname.pre-install $pkgname.post-install"
+install="$pkgname.pre-install $pkgname.post-install $pkgname.post-deinstall"
+
 options="!check"
 
 prepare() {
 	chmod 755 configure
-	chmod 644 include/dcc_types.h include/dcc_config.h.in homedir/dcc_conf.in
+	chmod 644 include/dcc_types.h include/dcc_config.h.in homedir/dcc_conf.in LICENSE
 	default_prepare
 }
 
@@ -32,19 +32,18 @@ build() {
 	./configure \
 		--with-installroot="$pkgdir" \
 		--bindir="/usr/bin" \
-		--mandir="/usr/man" \
+		--mandir="/usr/share/man" \
 		--with-uid=dcc
 	make
 }
 
 package() {
 	make install
-	install -Dm644 "$builddir"/LICENSE \
-		usr/share/licenses/$pkgname/LICENSE
 
 	cd "$pkgdir"
 	install -Dm 755 "$srcdir"/$pkgname.initd etc/init.d/$pkgname
 	install -Dm 644 "$srcdir"/$pkgname.confd etc/conf.d/$pkgname
+	install -Dm644 "$builddir"/LICENSE usr/share/licenses/$pkgname/LICENSE
 
 	chmod 755 "$pkgdir"/var/dcc/libexec/dccsight
 	cd "$pkgdir"/usr/bin
@@ -56,14 +55,14 @@ dccd() {
 	depends="dcc"
 	_p=var/dcc/libexec
 	cd "$pkgdir"/$_p
-	amove "$_p"/dccd "$_p"/start-dccd "$_p"/stop-dccd "$_p"/start-grey
+	amove "$_p"/dccd "$_p"/start-dccd "$_p"/stop-dccd "$_p"/start-grey "$_p"/dump-clients
 }
 
 dccifd() {
 	pkgdesc="$pkgdesc (dccifd server)"
 	depends="dcc"
 	cd "$pkgdir"
-	amove var/dcc/libexec/dccifd var/dcc/libexec/start-dccifd
+	amove var/dcc/libexec/dccifd var/dcc/libexec/start-dccifd usr/bin/dccif-test
 }
 
 dccm() {
@@ -74,16 +73,10 @@ dccm() {
 }
 
 extras() {
-	pkgdesc="$pkgdesc (dcc update and uninstall)"
+	pkgdesc="$pkgdesc (dcc update,uninstall, and dccproc)"
 	depends="dcc"
 	cd "$pkgdir"
-	amove var/dcc/libexec/updatedcc var/dcc/libexec/uninstalldcc
-}
-
-doc() {
-	pkgdesc="$pkgdesc (man files)"
-	cd "$pkgdir"
-	amove usr/man
+	amove var/dcc/libexec/updatedcc var/dcc/libexec/uninstalldcc usr/bin/dccproc
 }
 
 sha512sums="384a572e5b18bed6aed08dce6ebc468d5737b0cb4774fe502f527b101a38b4bec1fdd73384c6fb437c21ae46aa56ae04c5c459737cdda6ab3ce186ff4f77cf98  dcc-2.3.167.tar.gz
