community/sysprof: fix build on 32-bit

--- a/community/sysprof/APKBUILD
+++ b/community/sysprof/APKBUILD
@@ -12,7 +12,8 @@ makedepends="meson gtk+3.0-dev itstool glib-dev polkit-dev elogind-dev
 	libdazzle-dev"
 options="!check" # test-model-filter fails
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/sysprof/${pkgver%.*}/sysprof-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/sysprof/${pkgver%.*}/sysprof-$pkgver.tar.xz
+	fix-32-bit-build.patch"
 
 build() {
 	meson \
@@ -35,4 +36,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="41f99cc3446a6624ea74fcdecd7a29a2e5e2d4086383d59a9064c4a3df5d9b8d08f4903ff4dcc85ffa9c6d42bd84dec5c03f6010fffd4415cc8fecf4dc0b23f4  sysprof-3.36.0.tar.xz"
+sha512sums="41f99cc3446a6624ea74fcdecd7a29a2e5e2d4086383d59a9064c4a3df5d9b8d08f4903ff4dcc85ffa9c6d42bd84dec5c03f6010fffd4415cc8fecf4dc0b23f4  sysprof-3.36.0.tar.xz
+c03fc64a4fdb19e4b3e21ef42e9f21a2af8ed33cdb503314fbb2d826ec6ad4b5e57078191553681be21934aca30442c7b2662facd28a499e86107d148ed96773  fix-32-bit-build.patch"
