testing/hub: upgrade to 2.14.2

--- a/testing/hub/APKBUILD
+++ b/testing/hub/APKBUILD
@@ -3,19 +3,20 @@
 # Contributor: Eivind Uggedal <eu@eju.no>
 # Maintainer: Roberto Oliveira <robertoguimaraes8@gmail.com>
 pkgname=hub
-pkgver=2.14.1
+pkgver=2.14.2
 pkgrel=0
 pkgdesc="Extends git with extra features for GitHub"
 url="https://hub.github.com/"
 arch="all"
 license="MIT"
 makedepends="go util-linux bash ca-certificates groff"
-options="net !checkroot"
+options="net !checkroot chmod-clean"
 subpackages="
 	$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
-	$pkgname-fish-completion:fishcomp:noarch"
+	$pkgname-fish-completion:fishcomp:noarch
+	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/github/hub/archive/v$pkgver.tar.gz"
 
 builddir="$srcdir/src/github.com/github/hub"
@@ -67,4 +68,4 @@ fishcomp() {
 		"$subpkgdir"/usr/share/fish/completions/$pkgname.fish
 }
 
-sha512sums="dc4fc1ea27c4338ace1233089eea45fe4b636d6b000ef49b2ae44481d508b76c4c2035573acb0654efb2a3986ebdeb7b57dee9e77bbbdedc319c6dbba4ea6f8c  hub-2.14.1.tar.gz"
+sha512sums="4809d12966cc983f42c8aef482e07bc4226e25fc4deba838e418664ce14ac9d2ac42842d0721a46466a80c0e492392542ecfaaccc2cea0efdd60df8b60a3ca02  hub-2.14.2.tar.gz"
