main/libseccomp: upgrade to 2.4.3

--- a/main/libseccomp/APKBUILD
+++ b/main/libseccomp/APKBUILD
@@ -2,19 +2,18 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Contributor: Dan Williams <dan@ma.ssive.co>
 pkgname=libseccomp
-pkgver=2.4.2
-pkgrel=3
+pkgver=2.4.3
+pkgrel=0
 pkgdesc="An interface to the Linux Kernel's syscall filtering mechanism"
 url="https://github.com/seccomp/libseccomp"
 arch="all"
-license="LGPL-2.1"
+license="LGPL-2.1-or-later"
 depends_dev="linux-headers"
 makedepends="$depends_dev"
 checkdepends="bash"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/seccomp/libseccomp/releases/download/v$pkgver/libseccomp-$pkgver.tar.gz
 	remove-redefinition-prctl.patch
-	tests-rely-on-__SNR_xxx-instead-of-__NR_xxx-for-syscalls.patch
 	fix-performace-regression.patch
 	"
 
@@ -23,7 +22,6 @@ source="https://github.com/seccomp/libseccomp/releases/download/v$pkgver/libsecc
 #     - CVE-2019-9893
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -36,7 +34,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	# commit be65b26b67099be2b2b4890d736dbd1ad15adf36 adapted to new kernel 5.x syscalls
 	# as long as we are at 4.19 kernel, we need this change
 	case "$CARCH" in
@@ -47,11 +44,9 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="375a3c7c658be6a08b9bb30963e10bb49e8e066119e0be6d3d97faac3db18b8e2c6938d8b5d3874b2f5331ec8295170112fbae83b5a3b5a5bebc0d6705bdfdbb  libseccomp-2.4.2.tar.gz
+sha512sums="7b7af2e98493243ffe1934fefff5723b24ae9b9bdc4bf039343ee8456c15acb0ea34e81ec292a41143848272aeca794ef92ad38fc3f42c77465170cb540479ef  libseccomp-2.4.3.tar.gz
 f2c31dcafdc9a1ad78e32e76b75e1c1603071eaa3f979e1f2483b879a34ad07e0a4ef3642196a695415cdf81e1ed2bf325175872fb4e203ef9d0e668c287493f  remove-redefinition-prctl.patch
-e9c6adbc424c310802851ec486df23aedd8121397a9742f3a5ed4754a5eee7ec1701a6f5e220bb37911b8c48626ba00d70943fad43e489d740d0295e6e9b0dff  tests-rely-on-__SNR_xxx-instead-of-__NR_xxx-for-syscalls.patch
 c9dd939552089b006e03b94a323c9932806b0681b493b3365c291273cff4485b1066a73919a85dff238fc10e33cd4f67c99645049b0696ba0d6f229aac8d8b81  fix-performace-regression.patch"
