testing/libkexiv2: disable on armhf, missing extra-cmake-modules

--- a/testing/libkexiv2/APKBUILD
+++ b/testing/libkexiv2/APKBUILD
@@ -5,7 +5,7 @@ pkgver="19.12.3"
 pkgrel=0
 pkgdesc="A library to manipulate pictures metadata"
 url="https://www.kde.org/applications/graphics"
-arch="all"
+arch="all !armhf" # extra-cmake-modules
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev exiv2-dev"
 subpackages="$pkgname-dev"
