testing/libkgeomap: disable on armhf, missing libkexiv2

--- a/testing/libkgeomap/APKBUILD
+++ b/testing/libkgeomap/APKBUILD
@@ -6,7 +6,8 @@ pkgrel=0
 pkgdesc="A wrapper around world map components for browsing and arranging photos on a map"
 url="https://www.kde.org/applications/graphics/"
 # ppc64le and s390x blocked by marble-dev
-arch="all !ppc64le !s390x"
+# armhf blocked by libkexiv2
+arch="all !ppc64le !s390x !armhf"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev ki18n-dev kconfig-dev kio-dev marble-dev libkexiv2-dev"
 subpackages="$pkgname-dev $pkgname-lang"
