--- a/testing/kphotoalbum/APKBUILD
+++ b/testing/kphotoalbum/APKBUILD
@@ -6,7 +6,8 @@ pkgrel=0
 pkgdesc="KDE Photo Album, picture collection manager"
 url="https://kphotoalbum.org"
 # ppc64le and s390x blocked by marble-dev
-arch="all !ppc64le !s390x"
+# armhf blocked my libkgeomap
+arch="all !ppc64le !s390x !armhf"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev phonon-dev karchive-dev kcompletion-dev kconfig-dev kcoreaddons-dev kdoctools-dev ki18n-dev kiconthemes-dev kjobwidgets-dev kio-dev ktextwidgets-dev kxmlgui-dev kwidgetsaddons-dev jpeg-dev exiv2-dev libkipi-dev purpose-dev libkdcraw-dev marble-dev libkgeomap-dev"
 subpackages="$pkgname-doc $pkgname-lang"
