--- a/community/jruby/APKBUILD
+++ b/community/jruby/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=jruby
-pkgver=9.2.10.0
+pkgver=9.2.11.0
 pkgrel=0
 pkgdesc="An implementation of Ruby on the JVM"
-url="https://jruby.org/"
+url="https://www.jruby.org/"
 arch="noarch"
-license="EPL GPL-2.0 LGPL-2.1 custom"
+license="EPL-2.0 OR GPL-2.0-or-later OR LGPL-2.1-or-later AND Ruby"
 # libc6-compat: https://github.com/jnr/jnr-posix/issues/73
 depends="$pkgname-libs=$pkgver-r$pkgrel
 	java-jffi-native>=1.2 libc6-compat>=1.1.12-r5 openjdk8-jre-base"
@@ -19,8 +19,9 @@ subpackages="
 	$pkgname-webrick::noarch
 	$pkgname-libs"
 # jruby (launch script): https://github.com/jruby/jruby/pull/1860
-source="https://s3.amazonaws.com/jruby.org/downloads/$pkgver/$pkgname-bin-$pkgver.tar.gz
-	jruby"
+source="https://s3.amazonaws.com/jruby.org/downloads/$pkgver/jruby-bin-$pkgver.tar.gz
+	jruby
+	"
 
 _destdir="/usr/share/$pkgname"
 _bindir="$_destdir/bin"
@@ -139,5 +140,5 @@ _mvgem() {
 	done
 }
 
-sha512sums="f4ca024602ddab37154f5547132accb26e7c0ac2e913ebe1b5c7806727eb148249e76031ed4623ab53814beb8fb3f472e386f44d57adb5d2b3b00fb2773c8a63  jruby-bin-9.2.10.0.tar.gz
+sha512sums="f736a9e139694c84d0a5ea42f36b972adc82c9be13e0b80bd61045c026e4fe31ccdd4be3dd3e94781c846f356e026465e41716fd2744ded2ab0ca39cd33bb46b  jruby-bin-9.2.11.0.tar.gz
 836a73b46b9ea107b3ab51da9fea73cecd8664b7d72c4024c491c67312e6c094c215aa9d22d1e3f9f2402816bc0200dd4060d1895f4ba28424228d6cdbac8a9d  jruby"
