main/sysstat: upgrade to 12.2.1
remove 'iA' prefix from pkgdesc

--- a/main/sysstat/APKBUILD
+++ b/main/sysstat/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sysstat
-pkgver=12.2.0
+pkgver=12.2.1
 pkgrel=0
-pkgdesc="iA Performance monitoring tools"
+pkgdesc="Performance monitoring tools"
 url="http://pagesperso-orange.fr/sebastien.godard/"
 arch="all"
 license="GPL-2.0-or-later"
@@ -28,4 +28,4 @@ package() {
 
 }
 
-sha512sums="2398be1d5181616c337ead8f62b6bfb1144b89c747800140503c6a94793976f7909c81b656290577d51ebdee2f380418902846271b48ed79c6d7f02306f0a8a1  sysstat-12.2.0.tar.gz"
+sha512sums="a19d0978eb11071c228462cda496a59721541e57a1d15cb2d0964f287ac2d50b5587fa5bc2b8fe6be2a1f00cbf2e7c3bc59db6494e3e8c1906aa81437b30d073  sysstat-12.2.1.tar.gz"
