community/gotop: upgrade to 3.5.0
Original author has handed off the project https://github.com/cjbassi/gotop/commit/61ed1ad0c36e85f3a6348a98e942d59fc1de5e2c

--- a/community/gotop/APKBUILD
+++ b/community/gotop/APKBUILD
@@ -1,29 +1,25 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=gotop
-pkgver=3.0.0
-pkgrel=1
+pkgver=3.5.0
+pkgrel=0
 pkgdesc="Terminal based graphical activity monitor"
-url="https://github.com/cjbassi/gotop"
+url="https://github.com/xxxserxxx/gotop"
 arch="all"
 license="AGPL-3.0-or-later"
-depends="procps" # Remove once #138 on cjbassi/gotop is fixed
+options="!check" # No test suite
+depends="procps" # Remove once #20 on xxxserxxx/gotop is fixed
 makedepends="git go"
-source="$pkgname-$pkgver.tar.gz::https://github.com/cjbassi/gotop/archive/$pkgver.tar.gz"
-builddir="$srcdir/src/github.com/cjbassi/gotop"
+source="$pkgname-$pkgver.tar.gz::https://github.com/xxxserxxx/gotop/archive/v$pkgver.tar.gz"
+builddir="$srcdir/src/github.com/xxxserxxx/gotop"
 
 prepare() {
 	default_prepare
-	mkdir -p "$srcdir"/src/github.com/cjbassi
+	mkdir -p "$srcdir"/src/github.com/xxxserxxx
 	mv "$srcdir"/$pkgname-$pkgver "$builddir"/
 }
 
 build() {
 	GOPATH="$srcdir" go build -v -o bin/$pkgname .
-}
-
-check() {
-	# No testsuite is provided
-	./bin/$pkgname --help
 }
 
 package() {
@@ -35,4 +31,4 @@ cleanup_srcdir() {
 	default_cleanup_srcdir
 }
 
-sha512sums="012cc627fa7013409f3775d5bf2528e25e275fc285fea7ae93a1afec33474c923cc6cd9accb24fce479ab229c98d6438cc9f5eb7dea37f72c1905516d5fdbf6e  gotop-3.0.0.tar.gz"
+sha512sums="e21a4e5ae73ce7084f9d1afce1e3cf092bfd0d4791c6a2a0dd910ad6dc433bf58bf4df729082ae011d7903a8fcfe7c7984864158d92e5969b6f662f5c5f44ae1  gotop-3.5.0.tar.gz"
