community/ofono: use system ell, supervise-daemon, package test scripts
Right now ofono builds a static version of ell, pass --enable-external-ell
to build against Alpine's ell.

The test scripts are more or less the "official" CLI for ofono,
so it is nice to have them packaged for testing.

--- a/community/ofono/APKBUILD
+++ b/community/ofono/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=ofono
 pkgver=1.31
-pkgrel=0
+pkgrel=1
 pkgdesc="Infrastructure for building mobile telephony (GSM/UMTS) applications"
 url="https://01.org/ofono"
 arch="all"
 license="GPL-2.0-only"
 depends="bluez mobile-broadband-provider-info"
-makedepends="glib-dev dbus-dev eudev-dev
+makedepends="glib-dev dbus-dev ell-dev eudev-dev
 	linux-headers bsd-compat-headers libexecinfo-dev"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc $pkgname-scripts::noarch"
 source="https://www.kernel.org/pub/linux/network/ofono/ofono-$pkgver.tar.xz
 	fix-explicit-bzero.patch
 	fix-TEMP_FAILURE_RETRY.patch
@@ -22,7 +22,9 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
-		--sbindir=/usr/sbin
+		--sbindir=/usr/sbin \
+		--enable-external-ell \
+		--enable-test
 	make
 }
 
@@ -32,12 +34,19 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
-	install -Dm644 "$srcdir"/$pkgname-$pkgver/plugins/ofono.rules "$pkgdir"/usr/lib/udev/rules.d/60-ofono.rules
+	install -Dm644 plugins/ofono.rules "$pkgdir"/usr/lib/udev/rules.d/60-ofono.rules
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
+}
+
+scripts() {
+	pkgdesc="$pkgdesc (test scripts)"
+	depends="python3 py3-dbus py3-gobject3"
+
+	amove usr/lib/ofono/test
 }
 
 sha512sums="377cda34dcc92d1f339a4b3271de5a14afaf309061c4467e5af18089cd821e65c0d8ad29d07e96d0f0480bb51554b284afb6bc2b9da586cc30dc0c1440612b20  ofono-1.31.tar.xz
 7367464a8983969c9a78c1e4f8759a17eb47f6c61c94b088d749c83bb7ef5d19e037cadedd7ef5d34a0fdfe837fa8059e963f4fb2b14148e4a80f00e7cb29286  fix-explicit-bzero.patch
 687a2fd592add40122b789073ab9970d6e966752fdecc4077afe1c1bba705fe541dd0e457094f1d9cde747c571b7810b5b1a30835a3f1869bcd810751d5bf76f  fix-TEMP_FAILURE_RETRY.patch
 777ab2e13eebd1ccbe12a304310a83b262a5d934207c6a8d410e75aff380838eed1a52f3c2fe0d80c1e7db7faa9b55bf17e78a1e1acd8cfb95a3c6aef49c5b67  skip-broken-test.patch
-8bf14296d15458c930c99b97408fd6fb0d6d3cb9bffd5d85e7500514dc99fffe39a300da24ebc776811fe75e217a5537e358f72c3e8ac5070ec17f36bab086a9  ofono.initd"
+e2d4f871c47329d82caa06b601d03176032026f28ef85e62fddf1a35f0918ef7d3efeb8dec9b29efd0e750f83f1a485f011370eae5179b479eda1fd07be47c7f  ofono.initd"
