--- a/main/shorewall6/APKBUILD
+++ b/main/shorewall6/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=shorewall6
-pkgver=5.2.3.3
+pkgver=5.2.3.7
 
 _maj_min_patch=$pkgver
 case $pkgver in
@@ -11,40 +11,34 @@ _maj_min=${_maj_min_patch%.*}
 
 pkgrel=0
 pkgdesc="Files for the IPV6 Shorewall Firewall"
-url="http://www.shorewall.net/"
+url="https://shorewall.org/"
 arch="noarch"
-license="GPL-2.0"
-options="!check"
+license="GPL-2.0-or-later"
+options="!check" # No test suite
 depends="shorewall-core perl ip6tables iproute2"
 # coreutils for install -T
 makedepends="coreutils bash"
-subpackages="$pkgname-doc"
-source="http://www.shorewall.net/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/$pkgname-$pkgver.tar.bz2
+subpackages="$pkgname-doc $pkgname-openrc"
+source="https://shorewall.org/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/shorewall6-$pkgver.tar.bz2
 	shorewall6.initd
 	shorewallrc.alpine
 	"
-builddir="$srcdir/$pkgname-$pkgver"
-
 prepare() {
-	cd "$builddir"
-
 	default_prepare
 
 	cp "$srcdir"/shorewallrc.alpine .
 }
 
 build() {
-	cd "$builddir"
 	./configure
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ./install.sh shorewallrc.alpine
 	install -Dm755 "$srcdir"/shorewall6.initd \
 		"$pkgdir"/etc/init.d/shorewall6
 }
 
-sha512sums="ceb887f479841ed4998e488019bf3ec6874585c552f67be60af39f6414b40d24e2f6595812241d2f5fdf021beed2e0e2af8d98b03cdc66e72c7aedecbad8d3b1  shorewall6-5.2.3.3.tar.bz2
+sha512sums="45ac97f27569006715156579ca86e9dc580d30f64dabb1557ef25dbb171e76a67251a64e4ff77c8e88017dc2a9e364503c1f565f376312335ca2ac0d961a6043  shorewall6-5.2.3.7.tar.bz2
 c8cb512c487f30e26b63bd8e42cf506d032ced2364e0e79e86a3cff84f778ddf00efcbf1e23b07ba0aea9b5b7fcf5f0d10cd4b9884df46ee73ee6b2dff5cd672  shorewall6.initd
 c076ae42e7b404cecf521fdc32f92ba3a6b77d61579726abde2f00b6b6282e55b0b334b9fe5e43a6e4ae56361cce3214d9a38099f9f8714f03ae4fb888c744b7  shorewallrc.alpine"
