--- a/main/shorewall/APKBUILD
+++ b/main/shorewall/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=shorewall
-pkgver=5.2.3.3
+pkgver=5.2.3.7
 
 _maj_min_patch=$pkgver
 case $pkgver in
@@ -11,39 +11,33 @@ _maj_min=${_maj_min_patch%.*}
 
 pkgrel=0
 pkgdesc="An iptables front end for firewall configuration"
-url="http://www.shorewall.net/"
+url="https://shorewall.org/"
 arch="noarch"
-license="GPL-2.0"
-options="!check"
+license="GPL-2.0-or-later"
+options="!check" # No test suite
 depends="shorewall-core perl iptables iproute2"
 # coreutils for install -T
 makedepends="coreutils bash"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="http://www.shorewall.net/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/$pkgname-$pkgver.tar.bz2
+source="https://shorewall.org/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/shorewall-$pkgver.tar.bz2
 	shorewall.initd
 	shorewallrc.alpine
 	"
-builddir="$srcdir/$pkgname-$pkgver"
-
 prepare() {
-	cd "$builddir"
-
 	default_prepare
 
 	cp "$srcdir"/shorewallrc.alpine .
 }
 
 build() {
-	cd "$builddir"
 	./configure
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ./install.sh shorewallrc.alpine
 	install -Dm755 "$srcdir"/shorewall.initd "$pkgdir"/etc/init.d/shorewall
 }
 
-sha512sums="d4166332160cbbc9e36f0c7f8fb6db8573dda17f80bbfb062465bba42f748c4f6815c9467da8a072b9eb01f3745fad67e00eea657ef61d9f90b49ad3a4668300  shorewall-5.2.3.3.tar.bz2
+sha512sums="c0f90d5cbbc6a9cad443b3ecfedda79bee71f79685049c421d8bba3826e5c874c7c31f09f243d3728514684983a27c8d4ac6854b55766fbcf34f6937f8ab28bd  shorewall-5.2.3.7.tar.bz2
 7e226f42f74ce92d4c40bd0e812fbe744f0e343de7d7d68f59328b57829b0a10e2226fa9ef78e3465846bb2f691f761810774672b0a8510f96b80d7645982dc5  shorewall.initd
 c076ae42e7b404cecf521fdc32f92ba3a6b77d61579726abde2f00b6b6282e55b0b334b9fe5e43a6e4ae56361cce3214d9a38099f9f8714f03ae4fb888c744b7  shorewallrc.alpine"
