--- a/main/shorewall-core/APKBUILD
+++ b/main/shorewall-core/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=shorewall-core
-pkgver=5.2.3.3
+pkgver=5.2.3.7
 
 _maj_min_patch=$pkgver
 case $pkgver in
@@ -11,36 +11,30 @@ _maj_min=${_maj_min_patch%.*}
 
 pkgrel=0
 pkgdesc="Core libraries for Shorewall"
-url="http://www.shorewall.net/"
+url="https://shorewall.org/"
 arch="noarch"
-license="GPL-2.0-only"
-options="!check"
-depends=""
+license="GPL-2.0-or-later"
+options="!check" # No test suite
 # coreutils for install -T
 makedepends="coreutils bash"
 subpackages="$pkgname-doc"
-source="http://www.shorewall.net/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/$pkgname-$pkgver.tar.bz2
+source="https://shorewall.org/pub/shorewall/$_maj_min/shorewall-$_maj_min_patch/shorewall-core-$pkgver.tar.bz2
 	shorewallrc.alpine
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
-	cd "$builddir"
-
 	default_prepare
 
 	cp "$srcdir"/shorewallrc.alpine .
 }
 
 build() {
-	cd "$builddir"
 	./configure
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ./install.sh shorewallrc.alpine
 }
 
-sha512sums="c8c03273f686a8fa4151686b2426e437b3169ec78831e2d2f4a5bb20bb5265f4ede4a701bca5d21d0d8cafb4bb1e2c460c1b7ebb72ff042ec47221304dfbddd5  shorewall-core-5.2.3.3.tar.bz2
+sha512sums="e708ee48bc087cef24959b22430c8d8814d5c2f9315988c410e6fa59b4dca9c8b48501fea9515115e760d902d9e9719f33c1310d91a83550030a8768efd18751  shorewall-core-5.2.3.7.tar.bz2
 c076ae42e7b404cecf521fdc32f92ba3a6b77d61579726abde2f00b6b6282e55b0b334b9fe5e43a6e4ae56361cce3214d9a38099f9f8714f03ae4fb888c744b7  shorewallrc.alpine"
