community/rt4: update fom perl-html-format rename to perl-html-formatter and update APKBUILD

--- a/community/rt4/APKBUILD
+++ b/community/rt4/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=rt4
 pkgver=4.4.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Request Tracker - issue and bug tracker"
 pkgusers="rt4"
 pkggroups="rt4"
@@ -42,7 +42,7 @@ depends="perl
 	perl-convert-color
 	perl-data-ical
 	perl-mime-types
-	perl-html-format
+	perl-html-formatter
 	perl-html-rewriteattributes>=0.05
 	perl-html-tree
 	perl-html-mason
