community/abduco: fix license and use https

--- a/community/abduco/APKBUILD
+++ b/community/abduco/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=abduco
 pkgver=0.6
-pkgrel=2
+pkgrel=3
 pkgdesc="Session management in a clean and simple way"
-url="http://www.brain-dump.org/projects/abduco/"
+url="https://www.brain-dump.org/projects/abduco/"
 arch="all"
-license="MIT"
+license="ISC"
 subpackages="$pkgname-doc"
-source="http://www.brain-dump.org/projects/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://www.brain-dump.org/projects/abduco/abduco-$pkgver.tar.gz
 	fix-tests.patch"
 
 build() {
