main/spice-protocol: upgrade to 0.14.1

--- a/main/spice-protocol/APKBUILD
+++ b/main/spice-protocol/APKBUILD
@@ -1,20 +1,17 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=spice-protocol
-pkgver=0.14.0
-pkgrel=2
+pkgver=0.14.1
+pkgrel=0
 pkgdesc="Spice protocol header files"
 url="http://www.spice-space.org/"
 arch="noarch"
 license="BSD-3-Clause LGPL-2.1-or-later"
 options="!check" # No test suite
 makedepends="meson"
-source="https://www.spice-space.org/download/releases/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://www.spice-space.org/download/releases/spice-protocol-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
-
 	meson build/ \
 		--buildtype=plain \
 		--prefix=/usr \
@@ -24,9 +21,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
-
 	DESTDIR="$pkgdir" ninja -C build/ install
 }
 
-sha512sums="797df5f529731e9fd395b5946af2490ecf02c26982cc4a0aef24c1766887a35222f68525a996f8bc7459c2c4a25fde0c9a10c489ee6cab6eed7a68a9b5d90f76  spice-protocol-0.14.0.tar.bz2"
+sha512sums="88b0e652564a1f826ee6d3c165ab05c40d13f366567db3840805f03d433d13d7f722225219c26759770d2cde33221fe6d97528521d0eb14bc069cd7ce9af8482  spice-protocol-0.14.1.tar.bz2"
