community/open-vm-tools: move plugins to subpackages

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -1,9 +1,10 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=open-vm-tools
 pkgver=11.0.5
 _pkgsubver=${pkgver#*_p}
 _ver=${pkgver/_p/-}
-pkgrel=0
+pkgrel=1
 pkgdesc="The Open Virtual Machine Tools are the open source implementation of VMware Tools."
 url="https://github.com/vmware/open-vm-tools/"
 arch="x86 x86_64"
@@ -11,13 +12,20 @@ license="LGPL-2.1-or-later"
 subpackages="
 	$pkgname-dbg
 	$pkgname-lang
+	$pkgname-deploypkg
+	$pkgname-guestinfo
 	$pkgname-gtk
+	$pkgname-hgfs
+	$pkgname-vix
 	$pkgname-static
+	$pkgname-timesync
+	$pkgname-vmbackup
+	$pkgname-plugins-all:_all:noarch
 	$pkgname-dev
 	$pkgname-openrc
 	$pkgname-doc
 	"
-install="$pkgname.pre-install"
+install="$pkgname.pre-install $pkgname.post-upgrade"
 checkdepends="cunit checkbashisms"
 makedepends="
 	procps-dev
@@ -70,6 +78,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive
 	$pkgname.logrotate
 	"
 builddir="$srcdir/$pkgname-stable-$_ver"
+
+_subpackages="$subpackages"  # save for func _all
+_pluginsdir='usr/lib/open-vm-tools/plugins'
 
 prepare() {
 	default_prepare
@@ -142,8 +153,24 @@ lang() {
 	amove usr/share/open-vm-tools/messages
 }
 
+deploypkg() {
+	pkgdesc="DeployPkg plugin for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove usr/lib/libDeployPkg.so.*
+	amove $_pluginsdir/vmsvc/libdeployPkgPlugin.so
+}
+
+guestinfo() {
+	pkgdesc="GuestInfo plugin for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove $_pluginsdir/vmsvc/libguestInfo.so
+}
+
 gtk() {
 	pkgdesc="Xorg apps and plugins for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
 
 	amove etc/xdg
 
@@ -153,6 +180,55 @@ gtk() {
 
 	amove usr/lib/open-vm-tools/plugins/vmusr
 	amove usr/lib/open-vm-tools/plugins/vmsvc/libresolutionKMS.so
+}
+
+hgfs() {
+	pkgdesc="Support for shared folders in VMware guests"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove sbin/mount.vmhgfs
+	amove usr/sbin/mount.vmhgfs
+	amove usr/bin/vmhgfs-fuse
+	amove usr/bin/vmware-hgfsclient
+
+	amove usr/lib/libhgfs.so.*
+	amove $_pluginsdir/common/libhgfsServer.so
+}
+
+timesync() {
+	pkgdesc="TimeSync plugin for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove $_pluginsdir/vmsvc/libtimeSync.so
+}
+
+vix() {
+	pkgdesc="VIX plugin for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove $_pluginsdir/common/libvix.so
+}
+
+vmbackup() {
+	pkgdesc="VmBackup plugin for open-vm-tools"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	amove $_pluginsdir/vmsvc/libvmbackup.so
+}
+
+_all() {
+	pkgdesc="Meta package with all open-vm-tools plugins except gtk"
+	depends=""
+	local plugin
+
+	for plugin in deploypkg guestinfo hgfs timesync vix vmbackup; do
+		if ! echo "$_subpackages" | grep -qw "$pkgname-$plugin"; then
+			die "plugin $plugin is missing in subpackages!"
+		fi
+		depends="$depends $pkgname-$plugin"
+	done
+
+	mkdir -p "$subpkgdir"
 }
 
 sha512sums="c09e5b66f318273c712880f8b8bfe9782f6302e798808eb588f643cfca763b6805d5672a95fc3c87bf18dd4549f7a0cdebf9b9ca313cf761a72864748895fab9  open-vm-tools-11.0.5.tar.gz
@@ -172,5 +248,5 @@ c18280eb3fdfe1e3ecc5aa116369908c71917bd4dd49743a9abf78e0096e8d6c7d4323057cf506ef
 8288503c54c5a15268b1590d747d4f246fa348734ebc70f3bd56f8cec6419d032ee6bf52a7579ee088f2c80f5b0d85f050e0615d6ad6cd8da016efa2a626ce17  mock-res_ninit-and-res_nclose.patch
 dbcec24beafbbe94c8ed12482f9d0c643a6bbec256198cdc898513410271a3e2c0b7e35b0997ee0e91b1567f4ed0ecf44740b8c972dd5b2fc4bf21643653153a  fix-mount.vmhgfs-symlink.patch
 d4d0c0c3042eef4d241c933de6f7c398a88275744b3576efc2f909acd681752f548e4ae4a17eca7db731ee0b9254b46169a48463d12a72ec6354065d788159f4  open-vm-tools.initd
-ffc9c945a41e48791bab61ba72fed96c1a6ae3722caa715424e3077d167421b4e2f53bb4d415ab227d1f6e40d6ca3779df41e6b0a38db34b520979fa2b19298d  open-vm-tools.confd
+820ff0ed2911c63970ee7cfad4cd9ea4a0eeee000de4e87e2d231bf8816a48af3af73ad288cca0adddf9e8fed7f36c72298fe0549fe945aded33fc186a6b31dd  open-vm-tools.confd
 5626c68b8ee01ece804f314b829476280e892581a448c27092e32a60b04d40ecfa8e8eca464c4376c3cfc497eb60406798b7383d1a747a173d3cd8b78d23100b  open-vm-tools.logrotate"
