community/network-manager-applet: upgrade to 1.16.0

--- a/community/network-manager-applet/APKBUILD
+++ b/community/network-manager-applet/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=network-manager-applet
-pkgver=1.8.24
-pkgrel=1
+pkgver=1.16.0
+pkgrel=0
 pkgdesc="GTK network manager applet"
 url="https://wiki.gnome.org/Projects/NetworkManager"
 arch="all !s390x" # Limited by networkmanager-dev
@@ -12,18 +12,16 @@ makedepends="
 	intltool
 	gcr-dev
 	gtk+3.0-dev
-	iso-codes-dev
 	jansson-dev
 	libsecret-dev
 	libgudev-dev
 	libnotify-dev
-	mobile-broadband-provider-info
 	modemmanager-dev
 	networkmanager-dev
 	polkit-dev
-	gobject-introspection-dev
+	libnma-dev
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="$pkgname-doc $pkgname-lang"
 source="https://download.gnome.org/sources/network-manager-applet/${pkgver%.*}/network-manager-applet-$pkgver.tar.xz"
 
 build() {
@@ -34,10 +32,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--with-gcr \
-		--enable-static=no \
 		--without-selinux \
-		--without-libnm-gtk \
 		--enable-introspection
 	make
 }
@@ -50,4 +45,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="76e914ec4f2e6eadd21ccc3e1f613fb97cb72d9551730a1dc09454177365dcaa2cdeea4b855c53732ad6a22cfa5e62e03f09fc8b04a277ce213dcf8c3beaf77c  network-manager-applet-1.8.24.tar.xz"
+sha512sums="0ad8ac1d05cf76b9a82602c6f8f7034ae52fc11bae0b5ee17cf5bd89c6c91ba3ef7b07f770397b22484d54fd69e7a9a73f8c08a4d3d9f492f11d09d0b0379ff5  network-manager-applet-1.16.0.tar.xz"
