community/gnome-control-center: use libnma-dev instead of network-manager-applet-dev
libnma-dev was split out of network-manager-applet-dev

--- a/community/gnome-control-center/APKBUILD
+++ b/community/gnome-control-center/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-control-center
 pkgver=3.36.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME control center"
 url="https://gitlab.gnome.org/GNOME/gnome-control-center"
 # limited by gnome-online-accounts
@@ -23,7 +23,7 @@ makedepends="
 	accountsservice-dev
 	libpwquality-dev
 	networkmanager-dev
-	network-manager-applet-dev
+	libnma-dev
 	modemmanager-dev
 	krb5-dev
 	itstool
