community/gnome-initial-setup: use libnma-dev instead of network-manager-applet-dev
libnma-dev was split out of network-manager-applet-dev

--- a/community/gnome-initial-setup/APKBUILD
+++ b/community/gnome-initial-setup/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-initial-setup
 pkgver=3.36.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A simple, easy,and safe way to prepare a new system"
 url="https://wiki.gnome.org/Design/OS/InitialSetup"
 arch="all !armhf !s390x !ppc64le" # limited by gnome-shell&mutter
@@ -12,7 +12,7 @@ makedepends="meson cheese-dev ibus-dev networkmanager-dev polkit-dev
 	accountsservice-dev gnome-desktop-dev fontconfig-dev libgweather-dev
 	gtk+3.0-dev gnome-online-accounts-dev gdm-dev geocode-glib-dev
 	geoclue-dev rest-dev libpwquality-dev webkit2gtk-dev libsecret-dev
-	network-manager-applet-dev krb5-dev"
+	libnma-dev krb5-dev"
 options="!check" # no tests
 subpackages="$pkgname-lang"
 source="https://download.gnome.org/sources/gnome-initial-setup/${pkgver%.*}/gnome-initial-setup-$pkgver.tar.xz"
