community/gnome-shell: use libnma-dev instead of network-manager-applet-dev
libnma-dev was split out of network-manager-applet-dev

--- a/community/gnome-shell/APKBUILD
+++ b/community/gnome-shell/APKBUILD
@@ -40,7 +40,7 @@ makedepends="gnome-desktop-dev
 	ibus-dev
 	sassc
 	networkmanager-dev
-	network-manager-applet-dev
+	libnma-dev
 	gnome-control-center-dev
 	py3-setuptools
 	gnome-bluetooth-dev
