main/curl: apply upstream revert
Upstream has reverted a change that causes timeout with http2. This breaks
tools like cargo and flatpak.

Upstream issue: https://github.com/curl/curl/issues/5044

--- a/main/curl/APKBUILD
+++ b/main/curl/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=curl
 pkgver=7.69.0
-pkgrel=0
+pkgrel=1
 pkgdesc="URL retrival utility and library"
 url="https://curl.haxx.se/"
 arch="all"
@@ -14,7 +14,9 @@ depends_dev="openssl-dev nghttp2-dev zlib-dev"
 checkdepends="python3"
 makedepends="$depends_dev autoconf automake groff libtool perl"
 subpackages="$pkgname-dbg $pkgname-static $pkgname-doc $pkgname-dev libcurl"
-source="https://curl.haxx.se/download/curl-$pkgver.tar.xz"
+source="https://curl.haxx.se/download/curl-$pkgver.tar.xz
+	revert-pause-force-drain-the-transfer-on-unpause.patch
+	"
 
 # secfixes:
 #   7.66.0-r0:
@@ -128,4 +130,5 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib
 }
 
-sha512sums="8c151201b09c51cc1437c2f6345036fce88ea5402cd1fd62b76c093e294b87d0c1f61e1dcf6f799f508d8dcfe381589a3815001a8c8bbc085aed0fdca6f2536d  curl-7.69.0.tar.xz"
+sha512sums="8c151201b09c51cc1437c2f6345036fce88ea5402cd1fd62b76c093e294b87d0c1f61e1dcf6f799f508d8dcfe381589a3815001a8c8bbc085aed0fdca6f2536d  curl-7.69.0.tar.xz
+4b0da7e39aa2bfb34280246478d5e8525ab45ce5b2045a3ff2704fc1c4d8aeb241cfaf8c797cbd279e03740988661ca98a4962f850891f96fdef6707c6197d1b  revert-pause-force-drain-the-transfer-on-unpause.patch"
