community/open-vm-tools: remove irrelevant stuff from default config

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -72,6 +72,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive
 	systemLinux.c-fixup-for-Alpine.patch
 	mock-res_ninit-and-res_nclose.patch
 	fix-mount.vmhgfs-symlink.patch
+	tools.conf.patch
 
 	$pkgname.initd
 	$pkgname.confd
@@ -247,6 +248,7 @@ a38bb2ac16657be9f7e9b2a5e32d23e66db1f283284c1cb8e7ffe853e047373397e60f01e735a28e
 c18280eb3fdfe1e3ecc5aa116369908c71917bd4dd49743a9abf78e0096e8d6c7d4323057cf506ef31886b893b2e4c4839656172edd5097a347efa96aea1c86c  systemLinux.c-fixup-for-Alpine.patch
 8288503c54c5a15268b1590d747d4f246fa348734ebc70f3bd56f8cec6419d032ee6bf52a7579ee088f2c80f5b0d85f050e0615d6ad6cd8da016efa2a626ce17  mock-res_ninit-and-res_nclose.patch
 dbcec24beafbbe94c8ed12482f9d0c643a6bbec256198cdc898513410271a3e2c0b7e35b0997ee0e91b1567f4ed0ecf44740b8c972dd5b2fc4bf21643653153a  fix-mount.vmhgfs-symlink.patch
+2704bd733fdbee956e6e8bf7dd5c4de314cb742185e5c0a4b781910d4e79cf9080b64496f8819d8d10711fdb159da6bfc6a7b8683edbb028ed6b4f7fe8eb5c71  tools.conf.patch
 d4d0c0c3042eef4d241c933de6f7c398a88275744b3576efc2f909acd681752f548e4ae4a17eca7db731ee0b9254b46169a48463d12a72ec6354065d788159f4  open-vm-tools.initd
 820ff0ed2911c63970ee7cfad4cd9ea4a0eeee000de4e87e2d231bf8816a48af3af73ad288cca0adddf9e8fed7f36c72298fe0549fe945aded33fc186a6b31dd  open-vm-tools.confd
 5626c68b8ee01ece804f314b829476280e892581a448c27092e32a60b04d40ecfa8e8eca464c4376c3cfc497eb60406798b7383d1a747a173d3cd8b78d23100b  open-vm-tools.logrotate"
