community/open-vm-tools: rename tools.conf.example to tools.conf

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -129,6 +129,7 @@ package() {
 	cd "$pkgdir"
 
 	chmod -x ./etc/vmware-tools/*.conf*
+	mv ./etc/vmware-tools/tools.conf.example ./etc/vmware-tools/tools.conf
 	mv ./etc/vmware-tools/vm-support ./usr/bin/vm-support
 
 	install -D -m 755 "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
