community/open-vm-tools: remove non-functional network script

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -133,6 +133,10 @@ package() {
 	mv ./etc/vmware-tools/tools.conf.example ./etc/vmware-tools/tools.conf
 	mv ./etc/vmware-tools/vm-support ./usr/bin/vm-support
 
+	# This script works with NetworkManager only.
+	# TODO: Write network script for Alpine.
+	rm -f ./etc/vmware-tools/scripts/vmware/network
+
 	install -D -m 755 "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
 	install -D -m 644 "$srcdir"/$pkgname.confd ./etc/conf.d/$pkgname
 	install -D -m 644 "$srcdir"/$pkgname.logrotate ./etc/logrotate.d/$pkgname
