--- a/community/sn0int/APKBUILD
+++ b/community/sn0int/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: kpcyrd <git@rxv.cc>
 # Maintainer: kpcyrd <git@rxv.cc>
 pkgname=sn0int
-pkgver=0.17.1
+pkgver=0.18.0
 pkgrel=0
 pkgdesc="Semi-automatic OSINT framework and package manager"
 url="https://github.com/kpcyrd/sn0int"
@@ -11,8 +11,8 @@ makedepends="
 	cargo
 	sqlite-dev
 	libseccomp-dev
+	libsodium-dev
 	py3-sphinx
-	wget
 	"
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
@@ -76,4 +76,4 @@ fishcomp() {
 		"$subpkgdir/usr/share/fish/completions/sn0int.fish"
 }
 
-sha512sums="5e6af0d2a865949a0fe4f9ac1044c568551ced6304e378a9d9601f3183d8128574e316d315fc79154e1f6f5eb0391cc2c3660f53b8f2ddd2ef9ed3f7a6305129  sn0int-0.17.1.tar.gz"
+sha512sums="b476be9e5593616ac6e1ee351974ada4b615c67c108e2043c7cd9efe7840efa66de739b8eaaa1e5406c43779bb83eb5ac4121412360066d83bf98895e57c5f40  sn0int-0.18.0.tar.gz"
