community/lightsoff: upgrade to 3.36.0

--- a/community/lightsoff/APKBUILD
+++ b/community/lightsoff/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=lightsoff
-pkgver=3.34.0
-pkgrel=2
+pkgver=3.36.0
+pkgrel=0
 arch="all !s390x" # Blocked by librsvg -> rust
 url="https://wiki.gnome.org/Apps/Lightsoff"
 pkgdesc="Turn off all the lights"
 license="GPL-2.0-or-later"
 makedepends="meson ninja itstool vala gtk+3.0-dev librsvg-dev clutter-dev clutter-gtk-dev"
+checkdepends="appstream-glib desktop-file-utils"
 source="https://download.gnome.org/sources/lightsoff/${pkgver%.*}/lightsoff-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
@@ -30,4 +31,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="dafdb121810f931dcc795decf6d94f3b9fb4c67b0ea2362451f1a73fe96ff8278682ac32dd3db4d0653d530e75ec4b37effa6ee55c916b72ea8d3de618ecf7a9  lightsoff-3.34.0.tar.xz"
+sha512sums="9d026432bf059fb72aa8aab7b52c22e81acca12c8ba6a26350970a22a760a5d113958288196acc38d6ecba1096155323ecef86406e94d35e9ed82f26f9e30eae  lightsoff-3.36.0.tar.xz"
