community/pipewire: upgrade to 0.3.1

--- a/community/pipewire/APKBUILD
+++ b/community/pipewire/APKBUILD
@@ -1,18 +1,20 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=pipewire
-pkgver=0.2.7
-pkgrel=2
+pkgver=0.3.1
+pkgrel=0
 pkgdesc="Multimedia processing graphs"
 url="https://pipewire.org/"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="meson alsa-lib-dev libx11-dev sdl2-dev ffmpeg-dev eudev-dev dbus-dev
-	glib-dev gstreamer-dev gst-plugins-base-dev sbc-dev doxygen xmltoman graphviz"
+	glib-dev gstreamer-dev gst-plugins-base-dev sbc-dev doxygen xmltoman graphviz
+	bluez-dev jack-dev vulkan-loader-dev pulseaudio-dev"
 options="!check" # no tests
 subpackages="$pkgname-dev $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/PipeWire/pipewire/archive/$pkgver.tar.gz
 	fix-s390x.patch
+	set-rpath.patch
 	"
 
 build() {
@@ -24,7 +26,9 @@ build() {
 		--buildtype=plain \
 		-Ddocs=true \
 		-Dman=true \
-		-Dgstreamer=enabled \
+		-Dgstreamer=true \
+		-Dexamples=false \
+		-Dffmpeg=true \
 		-Dsystemd=false \
 		. output
 	ninja -C output
@@ -34,5 +38,6 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="10d3e20cc3d233fbcd1fc39702ae3043a656ebcd9cd3c39c77f0cc2bf42ff4956fc03e7933c7b397bca446c63f45ddacea948d5ec7e4a3300499fa2794f14334  pipewire-0.2.7.tar.gz
-576a6fbb7d457bda70822a175a188b6f9dbf3b5cf9efa660e458f6d54ff6b88376821164534ec073f20b929d81c2232783f63612fc9ec5803bfe23356449f314  fix-s390x.patch"
+sha512sums="3b4a7a76a6dc9c72a454c21ac38d6bda858bf447d6e4844dbf53a977777038e439aa2a9d5c07a296c52bc7cdbd5e913e0fde12dcf974b69a9d2473b3eb1584ce  pipewire-0.3.1.tar.gz
+576a6fbb7d457bda70822a175a188b6f9dbf3b5cf9efa660e458f6d54ff6b88376821164534ec073f20b929d81c2232783f63612fc9ec5803bfe23356449f314  fix-s390x.patch
+aaf08704acd25ec5fde7392826080ec9344c9081d08109e5a74193cf4aca61285b1f489da6694b14cc21c6ec729213e2ef008f0d43fde61c6a4132da85f3b0ee  set-rpath.patch"
