community/weston: disable pipewire support for now
It's not compatible with pipewire-0.3

--- a/community/weston/APKBUILD
+++ b/community/weston/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=weston
 pkgver=8.0.0
-pkgrel=1
+pkgrel=2
 _libname=lib$pkgname
 _libdir=$_libname-${pkgver%%.*}
 pkgdesc="The reference Wayland server"
@@ -14,7 +14,7 @@ makedepends="wayland-protocols libxkbcommon-dev xkeyboard-config
 	pango-dev colord-dev libwebp-dev libva-dev dbus-dev
 	linux-pam-dev wayland-dev libevdev-dev libjpeg-turbo-dev
 	freerdp-dev lcms2-dev gstreamer-dev gst-plugins-base-dev meson
-	elogind-dev pipewire-dev
+	elogind-dev
 	"
 _cms="cms-colord cms-static"
 _shell="shell-desktop shell-fullscreen shell-ivi"
@@ -43,6 +43,7 @@ build() {
 		-Dlauncher-logind=true \
 		-Dsystemd=false \
 		-Dsimple-dmabuf-drm=auto \
+		-Dpipewire=false \
 		build
 	ninja -C build
 }
