community/xdg-desktop-portal: rebuild against pipewire-0.3
Also add an upstream patch to make it build against it

--- a/community/xdg-desktop-portal/APKBUILD
+++ b/community/xdg-desktop-portal/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=xdg-desktop-portal
 pkgver=1.6.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Desktop integration portal"
 options="!check" # Requires libportal which has no stable tags
 url="https://github.com/flatpak/xdg-desktop-portal"
@@ -10,10 +10,11 @@ arch="all"
 license="LGPL-2.1-or-later"
 depends="bubblewrap"
 makedepends="gettext-dev glib-dev json-glib-dev fontconfig-dev
-	geoclue-dev xmlto flatpak-dev pipewire-dev fuse-dev"
+	geoclue-dev xmlto flatpak-dev pipewire-dev fuse-dev autoconf automake libtool"
 checkdepends="dbus"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://github.com/flatpak/xdg-desktop-portal/releases/download/$pkgver/xdg-desktop-portal-$pkgver.tar.xz"
+source="https://github.com/flatpak/xdg-desktop-portal/releases/download/$pkgver/xdg-desktop-portal-$pkgver.tar.xz
+	a38901e5e7f835efe7b7a06c55790c8c20bc91a2.patch"
 
 prepare() {
 	default_prepare
@@ -25,6 +26,8 @@ prepare() {
 		-i depcomp \
 		-i config.sub \
 		-i config.guess
+
+	autoreconf -fi
 }
 
 
@@ -54,4 +57,5 @@ package() {
 	mv "$pkgdir"/usr/share/pkgconfig "$pkgdir"/usr/lib
 }
 
-sha512sums="7a0c702851762a55326142cb6b470205775284e0f749620ae6b648f216afcd684f8b20500339680b42812f628634344c9e826ab7cf13dd918fdbf733381d44ce  xdg-desktop-portal-1.6.0.tar.xz"
+sha512sums="7a0c702851762a55326142cb6b470205775284e0f749620ae6b648f216afcd684f8b20500339680b42812f628634344c9e826ab7cf13dd918fdbf733381d44ce  xdg-desktop-portal-1.6.0.tar.xz
+d3840c01c300b2e9c3e3b0659333427633e61abb91f69ed51764a1d503e9bd38e6cede941338bf40f557185b556ea027c785012034b6aa0e0627ff9e01eae913  a38901e5e7f835efe7b7a06c55790c8c20bc91a2.patch"
